# pvpai

./: .gitignore  DEPLOYMENT.md  PRICING.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  RENDER_SETUP.md  UPDATE_INSTRUCTIONS.md  backend-connector.js  config.js  index.html  render.yaml  setup-database.sql
.github/workflows/: deploy.yml
contracts/ethereum/: PvPAIStaking.sol  hardhat.config.js  package.json
contracts/ethereum/scripts/: deploy.js
contracts/solana/: Cargo.toml  lib.rs
multiplayer/: peer.js
server/: .env.example  Dockerfile  README.md  auth.js  database.js  game.js  index.js  package.json
simgame/: index.html
