[package]
name = "pvpai-staking"
version = "0.1.0"
description = "Solana program for PvP AI Battle Royale staking"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pvpai_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
